# Overcooked-coop-voice

./: .gitignore  AI_SLOWDOWN_10FPS_TABLE.md  AI_SLOWDOWN_README.md  ANALYSE_DIVERSITE_README.md  ASSET_SLOWDOWN_SUMMARY.md  AUDIO_SYSTEM_README.md  CARACTÉRISATION_COMPORTEMENTALE_SUMMARY.md  Dockerfile  INTEGRATION_TUTORIELS.md  KEYERROR_FIX_SUMMARY.md  README.md  README_analyze.md  README_evaluateur.md  RECIPE_GENERATOR_README.md  SLOWDOWN_DEBUG_SUMMARY.md  TRIAL_START_SLOWDOWN_README.md  TestLectureAudio.py  __init__.py  analyze_evaluation_results.py  app.py  backup_evaluation_par_simulation.py  behavioral_analyzer.py  behavioral_data_complete.json  behavioral_data_generator.py  compare_diversity_optimized.py  compare_diversity_sizes.py  compute_mlam.py  config.json  config2.json  debug_interactions.py  docker-compose.yml  docker-run.sh  docker-start.sh  docker-stop.sh  ensemble_recettes.json  evaluation_layout.py  evaluation_layout_final.py  evaluation_layout_real_simulation.py  evaluation_layout_real_simulation_fixed.py  evaluation_layout_simple.py  (+62 more)
.github/: copilot-instructions.md
docs/: logging.md
generation_layouts/: ensemble_recettes.json  layout_evaluator.py  path_evaluation_human.py
layouts_sélectionnés/: Ld18_R01_V00.layout  Ld18_R11_V00.layout  Ld18_R26_V00.layout  Ld20_R03_V00.layout  Ld20_R04_V00.layout
overcooked_ai_py/: utils.py
path_evaluation_results/: L100_R01_V01_evaluation.json  L100_R01_V01_rapport.md  L100_R02_V09_evaluation.json  L100_R02_V09_rapport.md  L100_R03_V08_evaluation.json  L100_R03_V08_rapport.md  L100_R04_V10_evaluation.json  (+73 more)
(+20216 files in other folders)
